--- a/views/form.ejs
+++ b/views/form.ejs
@@ -33,7 +33,7 @@
 
         <div class="mb-3">
           <label for="images" class="form-label">Profile photos</label>
-          <input type="file" name="profilePhotos" class="form-control" id="images" multiple />
+          <input type="file" name="profilePhoto" class="form-control" id="images" multiple />
         </div>
 
         <button type="submit" class="mt-3 btn btn-primary">Submit</button>
